--- a/src/main.css.jinja2
+++ b/src/main.css.jinja2
@@ -50,20 +50,33 @@ h6 {
     color: #fdf;
 }
 
+.sono-body {
+  font-family: "Sono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "MONO" 0;
+}
 
-.noto-sans-default {
-    font-family: "Noto Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+.sono-mono {
+  font-family: "Sono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "MONO" 1;
 }
 
 a {
     text-decoration: none;
     font-weight: 700;
     color: #f4f;
+    font-family: "Sono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings:
+        "MONO" 1;
 }
 
 a:hover {
@@ -72,6 +85,14 @@ a:hover {
 
 a:visited {
     color: #f8f;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+h2 {
+    font-size: 2.5rem;
 }
 
 ul {
