feat: use monospaced

--- a/src/index.html.jinja2
+++ b/src/index.html.jinja2
@@ -2,7 +2,7 @@
 {% block content %}
 {% for part in index.parts %}
 <div class="item">
-    <h2 class="sono-mono">{{part.title}}</h2>
+    <h2>{{part.title}}</h2>
     {% if part.description %}
     <p>{{part.description}}</p>
     {% endif %}
