--- a/src/base.html.jinja2
+++ b/src/base.html.jinja2
@@ -7,9 +7,8 @@
     <title>{% block title %}blog.mtib.dev{% endblock %}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sono:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sono:wght,MONO@500,0&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sono:wght,MONO@700,0&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sono:wght,MONO@500,0;500,1;700,0;700,1&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/main.css">
     <link rel="icon" href="/assets/m.png">
     <meta name="application-name" content="blog.mtib.dev">
