--- a/src/main.css.jinja2
+++ b/src/main.css.jinja2
@@ -61,9 +61,7 @@ h6 {
 
 .sono-mono {
   font-family: "Sono", monospace;
-  font-optical-sizing: auto;
   font-weight: 500;
-  font-style: normal;
   font-variation-settings:
     "MONO" 1;
 }
@@ -73,8 +71,6 @@ a {
     font-weight: 700;
     color: #f4f;
     font-family: "Sono", monospace;
-    font-optical-sizing: auto;
-    font-style: normal;
     font-variation-settings:
         "MONO" 1;
 }
@@ -89,10 +85,18 @@ a:visited {
 
 h1 {
     font-size: 4rem;
+    font-weight: 700;
 }
 
 h2 {
     font-size: 2.5rem;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 1.7rem;
+    line-height: 1.2;
+    font-weight: 700;
 }
 
 ul {
