--- a/src/posts/text_manipulation.html.jinja2
+++ b/src/posts/text_manipulation.html.jinja2
@@ -1,11 +1,11 @@
 {% extends "src/base.html.jinja2" %}
 {% block heading %}
-<h1>blog.mtib.dev</h1>
+<h1 class="sono-mono">blog.mtib.dev</h1>
 <a href="/index.html">back</a>
 {% endblock heading %}
 {% block content %}
 <div class="item">
-    <h2>Text Manipulation</h2>
+    <h2 class="sono-mono">Text Manipulation</h2>
     {% include "text_manipulation.html" %}
 </div>
 {% endblock content %}
